...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/yourFamHomeField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Your Family's Home"
        app:layout_constraintBottom_toTopOf="@+id/yourBestFriendHomeField"
        app:layout_constraintEnd_toEndOf="parent"
...
